--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
     "expo": "~46.0.7",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-task-manager": "~10.3.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-maps": "0.31.1",
-    "expo-location": "~14.3.0",
-    "expo-task-manager": "~10.3.0"
+    "react-native-maps": "0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
