--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "expo": "~46.0.7",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
@@ -19,6 +20,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-elements": "^3.4.2",
+    "react": "18.0.0",
     "react-native-maps": "0.31.1"
   },
   "devDependencies": {
