--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~46.0.7",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-task-manager": "~10.3.0",
+    "firebase": "^9.9.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-maps": "0.31.1",
-    "expo-location": "~14.3.0",
-    "expo-task-manager": "~10.3.0"
+    "react-native-elements": "^3.4.2",
+    "react-native-maps": "0.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
