--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "react-native": "0.69.4",
     "react-native-maps": "0.31.1",
     "react-native-screens": "~3.15.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-safe-area-context": "3.1.9",
     "firebase": "^9.9.2",
-    "react-native-elements": "^3.4.2",
+    "react-native-elements": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
