--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
     "expo": "~46.0.7",
+    "expo-camera": "~12.3.0",
+    "expo-image-picker": "~13.3.1",
     "expo-location": "~14.3.0",
+    "expo-media-library": "^14.2.0",
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
     "firebase": "^9.9.2",
     "react": "18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-native": "0.69.4",
     "react-native-elements": "^3.4.2",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
