--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -19,14 +20,14 @@
     "expo-task-manager": "~10.3.0",
     "firebase": "^9.9.2",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-elements": "^3.4.2",
+    "react-native-geolocation-service": "^5.3.0",
     "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
