--- a/package.json
+++ b/package.json
@@ -9,33 +9,46 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.3.0",
+    "@react-native-firebase/auth": "^15.3.0",
+    "@react-native-firebase/firestore": "^15.3.0",
+    "@react-native-firebase/storage": "^15.3.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
     "expo": "~46.0.7",
+    "expo-av": "~12.0.4",
     "expo-camera": "~12.3.0",
+    "expo-clipboard": "^3.1.0",
     "expo-image-picker": "~13.3.1",
     "expo-location": "~14.3.0",
     "expo-media-library": "^14.2.0",
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
-    "firebase": "^9.9.2",
+    "firebase": "^9.9.3",
     "react": "18.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-native": "0.69.4",
+    "react-native-action-button": "^2.8.5",
     "react-native-elements": "^3.4.2",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.9.0",
     "react-native-maps": "0.31.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/uuid": "^8.3.4"
   },
   "private": true
 }
