--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
