--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0",
     "react-native-maps": "0.31.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
