--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-dialog-input": "^1.0.8",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0",
     "react-native-maps": "0.31.1",
