--- a/package.json
+++ b/package.json
@@ -10,30 +10,36 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
     "expo": "~46.0.7",
+    "expo-image-picker": "^13.3.1",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
     "firebase": "^9.9.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "^0.69.5",
     "react-native-dialog-input": "^1.0.8",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-maps": "0.31.1",
     "react-native-modal": "^13.0.1",
+    "react-native-redux": "^1.0.11",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
