--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
     "firebase": "^9.9.2",
+    "gifs": "^0.0.8",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
