--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/uuid": "^8.3.4"
   },
   "private": true
 }
