--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rneui/base": "^4.0.0-rc.6",
     "expo": "~46.0.7",
     "expo-image-picker": "^13.3.1",
+    "expo-linear-gradient": "^11.4.0",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
