--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-dialog-input": "^1.0.8",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
