--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
@@ -16,6 +18,7 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
     "expo": "~46.0.7",
+    "expo-font": "~10.2.0",
     "expo-image-picker": "^13.3.1",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
@@ -28,6 +31,7 @@
     "react-native-dialog-input": "^1.0.8",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
+    "react-native-floating-label-input": "^1.4.2",
     "react-native-geolocation-service": "^5.3.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-maps": "0.31.1",
@@ -36,15 +40,20 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "tailwind-rn": "^4.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "concurrently": "^7.3.0",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "private": true
 }
