--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-dialog-input": "^1.0.8",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-dynamic-search-bar": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-geolocation-service": "^5.3.0",
