--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@eva-design/eva": "^2.1.1",
     "@expo/webpack-config": "^0.17.0",
     "@mui/material": "^5.10.3",
     "@react-native-async-storage/async-storage": "^1.17.10",
@@ -22,6 +23,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~46.0.7",
     "expo-app-loading": "^2.1.0",
     "expo-font": "~10.2.0",
@@ -51,6 +53,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
+    "react-native-svg": "12.3.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
