--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@expo/webpack-config": "^0.17.0",
-    "@react-native-community/datetimepicker": "^6.3.2",
     "@mui/material": "^5.10.3",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/datetimepicker": "^6.3.2",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -27,8 +27,8 @@
     "expo-status-bar": "~1.4.0",
     "expo-task-manager": "~10.3.0",
     "firebase": "^9.9.2",
-    "gifs": "^0.0.8",
     "geolib": "^3.3.3",
+    "gifs": "^0.0.8",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
@@ -37,16 +37,20 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-geolocation-service": "^5.3.0",
+    "react-native-gesture-handler": "^2.6.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-maps": "0.31.1",
     "react-native-modal": "^13.0.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.11",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-uuid": "^2.0.1",
     "react-native-select-dropdown": "^2.0.4",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
+    "react-star-rating-input": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "tailwind-react-native-classnames": "^1.5.1",
